context through RubyArray using more API lots and lots of deprecations handled
Using since in @deprecation:
  "10.0" for 10
  "9.4-" indicates the deprecation happened before 10.  These should
    be evaluated for removal before 10 is released.